# ntsc-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-ISC  LICENSE-MIT  MAINTAINING.md  README.md  about.toml  ae_sdk_win.zip.age  cargo-shim.py  easymode.md  macos-notes.md  roadmap.md  tf2ss.py
.cargo/: config.toml
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_ae.md  bug_openfx.md  bug_standalone.md  feature_request.md
.github/workflows/: build-workspace.yml
ae-plugin/: .gitignore  LICENSE-ISC  LICENSE-MIT  README.md  Version.h  calc-version.py  cross-macos-arm64-to-x86_64  cross-macos-x86_64-to-arm64  meson.build  ntscrs-ae-PiPL.r  ntscrs-ae.cpp  ntscrs-ae.h
assets/install_scripts/: postinstall
benches/: filter_bench.rs  filter_profile.rs
crates/ae-plugin/: Cargo.toml  README.md  build.rs
crates/ae-plugin/src/: handle.rs  lib.rs  window_handle.rs
crates/c-api/: Cargo.toml  cbindgen.toml  my_header.h
crates/c-api/src/: lib.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/gui/: Cargo.toml  README.md  build.rs  icon.rc  todo.md
crates/gui/src/: expression_parser.rs  lib.rs  main.rs  path_compare.rs  splitscreen.rs  third_party_licenses.rs  timeline.rs
crates/gui/src/app/: app_state.rs  dnd_overlay.rs  error.rs  executor.rs  format_eta.rs  layout_helper.rs  license_dialog.rs  main.rs  mod.rs  pipeline_info.rs  presets.rs  render_job.rs  render_settings.rs  system_fonts.rs  third_party_licenses_dialog.rs  ui_context.rs  update_dialog.rs
crates/gui/src/gst_utils/: clock_format.rs  egui_sink.rs  gstreamer_error.rs  init.rs  mod.rs  multi_file_path.rs  ntsc_pipeline.rs  ntscrs_filter.rs  pipeline_utils.rs  process_gst_frame.rs  video_pad_filter.rs
crates/gui/src/widgets/: mod.rs  render_job.rs  splitscreen.rs  timeline.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/ntscrs/: Cargo.toml
crates/ntscrs/benches/: filter_profile.rs
crates/ntscrs/src/: f32x4.rs  filter.rs  lib.rs  noise.rs  ntsc.rs  random.rs  settings.rs  shift.rs  thread_pool.rs  yiq_fielding.rs
crates/ntscrs/src/noise/: grid.rs  hash.rs  simplex.rs
crates/ntscrs/src/settings/: easy.rs  mod.rs  settings.rs  standard.rs
crates/openfx-plugin/: Cargo.toml  README.md  build.rs  wrapper.h
crates/openfx-plugin/src/: bindings.rs  lib.rs
src/: filter.rs  lib.rs  main.rs  noise.rs  ntsc.rs  random.rs  shift.rs
xtask/: Cargo.toml  README.md
xtask/src/: build_ofx_plugin.rs  build_plugin.rs  lib.rs  macos_ae_plugin.rs  macos_bundle.rs
xtask/src/util/: mod.rs  targets.rs
