[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"
identity_op = "allow"
new_without_default = "allow"
module_inception = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
dbg_macro = "warn"

[profile.bench]
debug = "full"

[patch.crates-io]
eframe = { git = "https://github.com/valadaptive/egui", branch = "0.33.0-termux" }
winit = { git = "https://github.com/valadaptive/winit", branch = "v0.30.x-termux" }
