[workspace]
members = ["crates/*", "xtask"]
resolver = "2"

[workspace.lints.clippy]
too_many_arguments = "allow"
identity_op = "allow"
new_without_default = "allow"
module_inception = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
dbg_macro = "warn"

[profile.bench]
debug = "full"

[patch.crates-io]
fearless_simd = { git = "https://github.com/linebender/fearless_simd/", rev = "3c9ce65" }
