[package]
name = "ae-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR ISC OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[target.'cfg(any(windows, target_os="macos"))'.dependencies]
after-effects = {git = "https://github.com/virtualritz/after-effects", rev = "0e0b197"}
premiere = {git = "https://github.com/virtualritz/after-effects", rev = "0e0b197"}
ntscrs = { path = "../ntscrs" }

[build-dependencies]
pipl = {git = "https://github.com/virtualritz/after-effects", rev = "0e0b197"}

[dependencies]
raw-window-handle = "0.6.2"
rfd = "0.15.3"

[lints]
workspace = true
