[package]
name = "gui"
version = "0.9.1"
edition = "2021"
default-run = "ntsc-rs-standalone"
license = "GPL-3.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/gui"

[dependencies]
ntscrs = { path = "../ntscrs" }
eframe = { version = "0.31", features = ["persistence", "x11", "wayland"] }
env_logger = "0.11.3"
snafu = "0.8.3"
logos = "0.15"
gstreamer = {version = "0.23", features = ["serde"]}
gstreamer-base = "0.23"
gstreamer-video = "0.23"
gstreamer-pbutils = "0.23"
futures-lite = "2.3.0"
async-executor = "1.12.0"
log = "0.4.20"
rfd = { git = "https://github.com/PolyMeilex/rfd", rev = "665230c", default-features = false, features = ["gtk3"] }
rand = "0.9.0"
tinyjson = "2.5.1"
open = "5.1.4"
serde = "1.0"
trash = "5.0.0"
blocking = "1.6.1"
clap = { version = "4.5.17", features = ["cargo", "string"] }
color-eyre = "0.6.3"
console = "0.15.8"

[build-dependencies]
embed-resource = "3.0.1"

[[bin]]
name = "ntsc-rs-standalone"

[[bin]]
name = "ntsc-rs-launcher"

[[bin]]
name = "ntsc-rs-cli"

[lints]
workspace = true
