[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/macros"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.27"
proc-macro2 = "1.0.56"

[dependencies.syn]
version = "2.0.15"
features = ["full", "extra-traits"]