[package]
name = "ntscrs"
version = "0.1.2"
edition = "2021"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/ntscrs"

[dependencies]
glam = "0.24.2"
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = "0.6.0"
simdnoise = { git = "https://github.com/valadaptive/rust-simd-noise", rev = "965175f" }
num-traits = "0.2"
macros = {path = "../macros"}
siphasher = "1.0.0"
num-derive = "0.4.1"
tinyjson = "2.5.1"
rayon = "1.8.0"
biquad = "0.4.2"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }

[target.'cfg(not(windows))'.dev-dependencies]
pprof = { version = "0.13.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "filter_profile"
harness = false

[lints]
workspace = true
