[package]
name = "ntscrs"
version = "0.1.2"
edition = "2024"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/ntscrs"

[dependencies]
rand = { version = "0.9.0", default-features = false }
rand_xoshiro = "0.7.0"
fearless_simd = "0.3"
num_enum = "0.7.5"
macros = {path = "../macros"}
siphasher = "1.0.0"
tinyjson = "2.5.1"
rayon-core = { version = "1.13.0", optional = true }
num_cpus = "1.16.0"
sval = { version = "2.14.1", features = ["std"] }
sval_json = { version = "2.14.1", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
image = { version = "0.25.1", default-features = false, features = ["png"] }

[features]
default = ["rayon"]
rayon = ["dep:rayon-core"]

[[bench]]
name = "filter_profile"
harness = false

[lints]
workspace = true
