[package]
name = "openfx-plugin"
version = "0.1.6"
edition = "2021"
license = "MIT OR ISC OR Apache-2.0"
repository = "https://github.com/valadaptive/ntsc-rs/tree/main/crates/openfx-plugin"

[dependencies]
allocator-api2 = "0.2.16"
ntscrs = { path = "../ntscrs" }
rfd = "0.15.0"
# TODO: remove this once https://github.com/PolyMeilex/rfd/pull/240 is merged
futures-util = { version = "*", features = ["io"] }

[build-dependencies]
bindgen = "0.71"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
